# platypus

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  configure.bat  configure.sh  platypus.rc  platypus.sln  platypus.vcxproj  platypus.vcxproj.filters  readme.md  vcpkg.json
.github/homebrew/: release-macos.txt  release-macos13.txt
.github/vcpkg-manifests/macos13/: vcpkg.json
.github/vcpkg-triplets/: arm64-osx-dynamic-13-release.cmake  x64-osx-dynamic-13-release.cmake
.github/workflows/: build-and-release-windows.yml  build-and-release.yml  release-macos-combined.yml  release-macos.yml  release-macos13.yml
cmake/: PlatypusDeployBundle.cmake.in  PlatypusFixBundle.cmake.in  PlatypusStagePhotoshopRelease.cmake.in  ResolvePhotoshopSDK.cmake  platypusConfig.cmake.in
include/platypus/: CradleFunctions.h  DWT.h  FDCT.h  FFST.h  HaarDWT.h  MCA.h  Shearlet.h  TextureRemoval.h
installer/payload/: installer.xml
installer/payload/files/: install_photoshop_plugin.txt
installer/payload/resources/: Icon.icns  license_agreement.txt
installer_guide/: mac.md  release.md  windows.md
mac/: AppIcon.icns  Info.plist  setup.sh
mac/Platypus.xcodeproj/: project.pbxproj
mac/Platypus.xcodeproj/project.xcworkspace/xcshareddata/: Platypus.xccheckout  graph.xccheckout
mac/Platypus.xcodeproj/project.xcworkspace/xcuserdata/paul.xcuserdatad/: UserInterfaceState.xcuserstate
mac/Platypus.xcodeproj/xcuserdata/paul.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mac/Platypus.xcodeproj/xcuserdata/paul.xcuserdatad/xcschemes/: Photoshop Plugin.xcscheme  xcschememanagement.plist
mac/platypus/Images.xcassets/AppIcon.appiconset/: Contents.json
mac/tmp/moc/: moc_textureManipulator.cpp
photoshop/: Info.plist  Info.plist.in  PiPLs.json  PiPLs.json.in  Platypus.rc  driver.cpp  messageBox.cpp  messageBox.m  platypus.r  suites.h  tiff.cpp  tiff.h
scripts/: mac_deploy_opencv.sh  mac_local_release.sh  mac_notarize_dmg.sh  mac_package_dir_dmg.sh  mac_package_dmg.sh  mac_sign_app.sh  mac_sign_bundle.sh  mac_verify_common.sh  mac_verify_photoshop_release.sh  mac_verify_release.sh  windows_install_artifact_signing_tools.ps1  windows_package.ps1  windows_sign.ps1  windows_sign_metadata.sample.json
src/: clipboard.cpp  clipboard.h  cvImage.h  debugMode.cpp  detectCradleDialog.cpp  detectCradleDialog.h  dicomLoader.cpp  dicomLoader.h  dicomSeriesDialog.cpp  dicomSeriesDialog.h  dicomSliceDialog.cpp  dicomSliceDialog.h  drawManipulator.cpp  drawManipulator.h  editManipulator.cpp  editManipulator.h  imageManager.cpp  imageManager.h  imageSource.cpp  imageSource.h  imageViewer.cpp  imageViewer.h  main.cpp  mainWindow.cpp  mainWindow.h  manipulator.cpp  manipulator.h  mask.cpp  mask.h  maskCommands.cpp  maskCommands.h  maskManipulator.cpp  maskManipulator.h  maskShape.cpp  maskShape.h  platypus.qrc  polygon.cpp  polygon.h  polygonCommands.cpp  polygonCommands.h  (+21 more)
src/cradle/: compat.h
src/cursors/: crosshair.xpm  delete.mask  delete.xbm  edit.mask  edit.xbm  insert.mask  insert.xbm  rotate.xbm  rotate.xbm.mask
src/platypus/: CradleFunctions.cpp  DWT.cpp  FDCT.cpp  HaarDWT.cpp  MCA.cpp  Makefile  TextureRemoval.cpp
tests/: backend_tests.cpp  qt_test_main.cpp  qt_tests.cpp  test_helpers.cpp  test_helpers.h
tests/images/: test.platypus  test.platypus.mask.tiff
